--- a/index.html
+++ b/index.html
@@ -281,6 +281,9 @@
       <div id="calendar_content" class="block_body" style="display: block;">
         <iframe src="https://calendar.google.com/calendar/embed?showPrint=0&amp;showCalendars=0&amp;showTz=0&amp;mode=AGENDA&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=cin.ufpe.br_qr1o4o0qmjb0i5te93hfsg9n1o%40group.calendar.google.com&amp;color=%235229A3&amp;ctz=America%2FRecife"
           style="border-width:0; font-size: large;" width="100%" height="600" frameborder="0" scrolling="no"></iframe>
+
+         <a href="https://calendar.google.com/calendar?cid=Y2luLnVmcGUuYnJfcXIxbzRvMHFtamIwaTV0ZTkzaGZzZzluMW9AZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ"><img class="display" src="images/agenda.png" width="420"></a>
+          
       </div>
     </div>
     <!-- block-end -->
