--- a/index-if689ec.html
+++ b/index-if689ec.html
@@ -282,7 +282,7 @@
         <iframe src="https://calendar.google.com/calendar/embed?showPrint=0&amp;showCalendars=0&amp;showTz=0&amp;mode=AGENDA&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=cin.ufpe.br_qr1o4o0qmjb0i5te93hfsg9n1o%40group.calendar.google.com&amp;color=%235229A3&amp;ctz=America%2FRecife"
           style="border-width:0; font-size: large;" width="100%" height="600" frameborder="0" scrolling="no"></iframe>
 
-         <a href="https://calendar.google.com/calendar?cid=Y2luLnVmcGUuYnJfcXIxbzRvMHFtamIwaTV0ZTkzaGZzZzluMW9AZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ"><img class="display" src="images/agenda.png" width="420"></a>
+         <a target="_blank" href="https://calendar.google.com/calendar?cid=Y2luLnVmcGUuYnJfcXIxbzRvMHFtamIwaTV0ZTkzaGZzZzluMW9AZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ"><img class="display" src="images/agenda.png"></a>
           
       </div>
     </div>
@@ -337,7 +337,7 @@
           com e-mail do CIn)</p>
 
         <a href="https://groups.google.com/a/cin.ufpe.br/d/forum/if689ec-l" target="_blank">
-          <img class="display" width="480px" src="images/google_groups_if689ec.png" alt="if689ec-l@cin.ufpe.br">
+          <img class="display" src="images/google_groups_if689ec.png" alt="if689ec-l@cin.ufpe.br">
         </a>
 
       </div>
