--- a/index-if672ec.html
+++ b/index-if672ec.html
@@ -309,9 +309,9 @@
       </div>
 
       <div id="calendar_content" class="block_body" style="display: block;">
-          <iframe src="https://calendar.google.com/calendar/b/1/embed?showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;showTz=0&amp;mode=AGENDA&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=cin.ufpe.br_k9453rr3mb8q283plljiqpmg5s%40group.calendar.google.com&amp;color=%238C500B&amp;ctz=America%2FRecife" style="border-width:0" width="700" height="600" frameborder="0" scrolling="no"></iframe>
+          <iframe src="https://calendar.google.com/calendar/b/1/embed?showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;showTz=0&amp;mode=AGENDA&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=cin.ufpe.br_k9453rr3mb8q283plljiqpmg5s%40group.calendar.google.com&amp;color=%238C500B&amp;ctz=America%2FRecife" style="border-width:0" width="100%" height="600" frameborder="0" scrolling="no"></iframe>
 
-          <a target="_blank" href="https://calendar.google.com/calendar/b/1?cid=Y2luLnVmcGUuYnJfazk0NTNycjNtYjhxMjgzcGxsamlxcG1nNXNAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ">
+          <a target="_blank" href="https://calendar.google.com/calendar/?cid=Y2luLnVmcGUuYnJfazk0NTNycjNtYjhxMjgzcGxsamlxcG1nNXNAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ">
           <img class="display" src="images/agenda.png">
         </a>
 
